--- a/package.json
+++ b/package.json
@@ -14,20 +14,24 @@
   "author": "Bhuvanesh Duvvuri",
   "license": "BSD 3-Clause License",
   "dependencies": {
+    "bulma": "^0.9.4",
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "validator": "^13.7.0",
-    "hamburger-react": "^2.5.0"
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.19",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
